--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -24,6 +24,11 @@
       <artifactId>javassist</artifactId>
       <version>3.19.0-GA</version>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
   </dependencies>
 
   <build>
