--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -39,6 +39,11 @@
       <artifactId>commons-math3</artifactId>
       <version>3.5</version>
     </dependency>
+    <dependency>
+      <groupId>net.sourceforge.jexcelapi</groupId>
+      <artifactId>jxl</artifactId>
+      <version>2.6.12</version>
+    </dependency>
   </dependencies>
 
   <build>
