--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -25,6 +25,11 @@
       <version>3.19.0-GA</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>4.1.6.RELEASE</version>
+    </dependency>
+    <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
@@ -71,10 +76,6 @@
             </goals>
             <configuration>
               <relocations>
-                <relocation>
-                  <pattern>org.objectweb.asm</pattern>
-                  <shadedPattern>agent.org.objectweb.asm</shadedPattern>
-                </relocation>
                 <relocation>
                   <pattern>org.javassist</pattern>
                   <shadedPattern>agent.org.javassist</shadedPattern>
