--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -15,11 +15,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.ow2.asm</groupId>
-      <artifactId>asm</artifactId>
-      <version>4.1</version>
-    </dependency>
-    <dependency>
       <groupId>org.javassist</groupId>
       <artifactId>javassist</artifactId>
       <version>3.19.0-GA</version>
@@ -58,8 +53,8 @@
         <configuration>
           <archive>
             <manifestEntries>
-              <Premain-Class>agent.Agent</Premain-Class>
-              <Boot-Class-Path>utils</Boot-Class-Path>
+              <Premain-Class>utexas.ece.smoke.agent.Agent</Premain-Class>
+              <Boot-Class-Path>utexas.ece.smoke.utils</Boot-Class-Path>
               <Can-Retransform-Classes>true</Can-Retransform-Classes>
             </manifestEntries>
           </archive>
@@ -78,7 +73,7 @@
               <relocations>
                 <relocation>
                   <pattern>org.javassist</pattern>
-                  <shadedPattern>agent.org.javassist</shadedPattern>
+                  <shadedPattern>utexas.ece.smoke.agent.org.javassist</shadedPattern>
                 </relocation>
               </relocations>
               <createDependencyReducedPom>false</createDependencyReducedPom>
